# advent-of-code

2017/: 01_inverse_captcha.cpp  02_corruption_checksum.cpp  03_spiral_memory.cpp  04_passphrase.cpp  05_jump_maze.cpp  06_memory_reallocation.cpp  07_recursive_circus.cpp
2017/03/: main.cpp  spiral_memory.cpp  spiral_memory.h
2017/07/: main.cpp  recursive_circus.cpp  recursive_circus.h  test.cpp
2017/08/: machine.cpp  machine.h  main.cpp  register_machine.cpp  register_machine.h  test.cpp
2019/: day01.go  day01_test.go  day02.go  day03.go  day04.go  utils.go
2019/cmd/day01a/: main.go
2019/cmd/day01b/: main.go
2019/cmd/day02a/: main.go
2019/cmd/day02b/: main.go
2019/cmd/day03a/: main.go
2019/cmd/day03b/: main.go
2019/util/: util.go
2022/: Cargo.toml  day1.rs  lib.rs
2022/day1/: mod.rs  part1.rs  part2.rs
2022/day1/src/: lib.rs  main.rs
2022/day2/: mod.rs  part1.rs  part2.rs
2022/day2/src/: lib.rs
2022/day3/: mod.rs  part1.rs  part2.rs
2022/day3/src/: lib.rs
2022/day4/: mod.rs  part1.rs  part2.rs
2023/: .gitignore
2023/common/: Io.roc  Loop.roc  Parse.roc  main.roc
2023/day1/: part1.roc  part2.roc
2023/day10/: Day10.roc  part1.roc  part2.roc
2023/day11/: main.roc  part1.roc
2023/day12/: main.py  main.roc  part1.roc
2023/day2/: part1.roc  part2.roc
2023/day3/: part1.roc  part2.roc
2023/day4/: part1.roc  part2.roc
2023/day5/: Day5.roc  part1.roc  part2.roc
2023/day6/: part1.roc  part2.roc
2023/day7/: part1.roc  part2.roc
2023/day8/: Parse.roc  part1.roc  part2.roc
2023/day9/: part1.roc  part2.roc
(+2 files in other folders)
