[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "lib.rs"

[[bin]]
name = "day1-part1"
path = "day1/part1.rs"

[[bin]]
name = "day1-part2"
path = "day1/part2.rs"

[[bin]]
name = "day2-part1"
path = "day2/part1.rs"

[[bin]]
name = "day2-part2"
path = "day2/part2.rs"

[[bin]]
name = "day3-part1"
path = "day3/part1.rs"

[[bin]]
name = "day3-part2"
path = "day3/part2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
