[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "lib.rs"
doctest = false

[[bin]]
name = "day1-part1"
path = "day1/part1.rs"
test = false

[[bin]]
name = "day1-part2"
path = "day1/part2.rs"
test = false

[[bin]]
name = "day2-part1"
path = "day2/part1.rs"
test = false

[[bin]]
name = "day2-part2"
path = "day2/part2.rs"
test = false

[[bin]]
name = "day3-part1"
path = "day3/part1.rs"
test = false

[[bin]]
name = "day3-part2"
path = "day3/part2.rs"
test = false

[[bin]]
name = "day4-part1"
path = "day4/part1.rs"
test = false

[[bin]]
name = "day4-part2"
path = "day4/part2.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
